# counter-plasmoid

./: CMakeLists.txt  Messages.sh
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: configGeneral.qml  main.qml
